src/objects/loan__Metro2_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan__Borrower_Employment_Info_Class__c</fullName>
        <inlineHelpText>This class is used to get the borrower information for the Metro2 file. Class must implement loan.CRBorrowerEmploymentInfoInterface .</inlineHelpText>
        <label>Borrower Employment Info Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Borrower_Info_Class__c</fullName>
        <inlineHelpText>This class is used to get the borrower information for the Metro2 file. Class must implement loan.LoanBorrowerInfo.</inlineHelpText>
        <label>Borrower Info Class</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Creditor_Classification_Code__c</fullName>
        <inlineHelpText>01 Retail
02 Medical/Health Care
03 Oil Company
04 Government
05 Personal Services
06 Insurance
07 Educational
08 Banking
09 Rental/Leasing
10 Utilities
11 Cable/Cellular
12 Financial
13 Credit Union
14 Automotive
15 Check Guarantee</inlineHelpText>
        <label>Creditor Classification Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Equifax_Identifier__c</fullName>
        <inlineHelpText>This contains the unique identification number assigned by Equifax, a consumer reporting agency.</inlineHelpText>
        <label>Equifax Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Experian_Identifier__c</fullName>
        <inlineHelpText>This contains the unique identification number assigned by Experian, a consumer reporting agency.</inlineHelpText>
        <label>Experian Identifier</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Folder_Name__c</fullName>
        <inlineHelpText>This is the name of the folder where the Metro2 file will be generated.</inlineHelpText>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Identification_Number__c</fullName>
        <inlineHelpText>This is used to uniquely identify a Data furnisher. Data furnishers are typically creditors, lenders or debt collection agencies that a consumer has had an experience or a relationship with.</inlineHelpText>
        <label>Base Segment Identification Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Include_K1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, metro 2 generator will include K1 segment.</description>
        <inlineHelpText>Check this if Metro 2 K1 segment needs to be added in credit reporting file</inlineHelpText>
        <label>Include K1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Include_N1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include N1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Innovis_Identifier__c</fullName>
        <inlineHelpText>This contains the unique identification number assigned by Innovis, a consumer reporting agency.</inlineHelpText>
        <label>Innovis Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Query_Class__c</fullName>
        <inlineHelpText>This class is used to generate the query for the Contact and Account objects. Class must implement loan.M2QueryGen.</inlineHelpText>
        <label>Metro2 Query Class</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Microbilt_PRBC_Identifier__c</fullName>
        <inlineHelpText>This contains the unique identification number assigned by PRBC, a consumer reporting agency.</inlineHelpText>
        <label>Microbilt PRBC Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Original_Creditor_Name__c</fullName>
        <label>Original Creditor Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Program_Date__c</fullName>
        <inlineHelpText>This contains the date your reporting format was developed. The format is MMDDYYYY.</inlineHelpText>
        <label>Program Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Program_Revision_Date__c</fullName>
        <inlineHelpText>This contains the last date your reporting format was revised. The format is MMDDYYYY.</inlineHelpText>
        <label>Program Revision Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Reporter_Address__c</fullName>
        <inlineHelpText>This contains the complete mailing address of the processing company ie. the street address, city, state and zip code.</inlineHelpText>
        <label>Reporter Address</label>
        <length>96</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reporter_Name__c</fullName>
        <label>Reporter Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reporter_Phone__c</fullName>
        <inlineHelpText>This contains the telephone number (area code + number) of the company that is sending the data ie. the data furnisher or the processor.</inlineHelpText>
        <label>Reporter Phone</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Transunion_Identifier__c</fullName>
        <inlineHelpText>This contains the unique identification number assigned by TransUnion, a consumer reporting agency</inlineHelpText>
        <label>Transunion Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Metro2 Parameters</label>
</CustomObject>